tests/parse_print/random_perturb/enum_liberated/change-01/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/change-01/change-01.essence:13:11:
unexpected )
expecting end of input, rest of statement, or statement
    find k : E)
              ^